--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "corrently-iot-jquery",
-  "version": "1.0.0",
-  "description": "JQuery Extension (Plugin) to bind IoT devices to a Corrently UI",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/energychain/corrently-iot-jquery.git"
-  },
-  "keywords": [
-    "iot",
-    "corrently",
-    "blockchain",
-    "energy",
-    "jquery"
-  ],
-  "author": "Thorsten Zoerner <thorsten.zoerner@stromdao.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/energychain/corrently-iot-jquery/issues"
-  },
-  "homepage": "https://github.com/energychain/corrently-iot-jquery#readme"
+	"name": "corrently-iot-jquery",
+	"version": "1.0.1",
+	"description": "JQuery Extension (Plugin) to bind IoT devices to a Corrently UI",
+	"keywords": [
+		"iot",
+		"corrently",
+		"blockchain",
+		"energy",
+		"jquery"
+	],
+	"homepage": "https://github.com/energychain/corrently-iot-jquery#readme",
+	"bugs": {
+		"url": "https://github.com/energychain/corrently-iot-jquery/issues"
+	},
+	"license": "MIT",
+	"author": "Thorsten Zoerner <thorsten.zoerner@stromdao.com>",
+	"main": "index.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/energychain/corrently-iot-jquery.git"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	}
 }
